--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<p>Software Developer</p>
 				</header>
 				<footer>
-					<a href="#first" class="button scrolly">Proceed to second phase</a>
+					<a href="images/Samantha_Campbell_Resume.pdf" class="button scrolly">Download Resume</a>
 				</footer>
 			</section>
 
@@ -28,8 +28,9 @@
 			<section id="first" class="main">
 				<header>
 					<div class="container">
-						<h2>Tessellate is a free responsive site template</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
+						<img src="images/IMG_3347.JPG" alt="profilePic" class="profilePic" />
+						<h1>Hello World!</h1>
+						<p>My father blessed me with a Gateway 2000 desktop computer when I was six. <br />
 						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
 					</div>
 				</header>
