still working on it

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 		<!-- First -->
 			<section id="first" class="main">
 				<header>
+					<h3>About Me</h3>
 					<div class="container">
 						<img src="images/IMG_3347.JPG" alt="profilePic" class="profilePic" />
-						<h1>Hello World!</h1>
-						<p>My father blessed me with a Gateway 2000 desktop computer when I was six. <br />
+						<p>Hello World! <br /> <br />
 						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
 					</div>
 				</header>
@@ -349,32 +349,7 @@
 		-->
 
 		<!-- Fourth -->
-			<section id="fourth" class="main">
-				<header>
-					<div class="container">
-						<h2>Sed feugiat ipsum consequat</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
-					</div>
-				</header>
-				<div class="content style4 featured">
-					<div class="container medium">
-						<form method="post" action="#">
-							<div class="row gtr-50">
-								<div class="col-6 col-12-mobile"><input type="text" placeholder="Name" /></div>
-								<div class="col-6 col-12-mobile"><input type="text" placeholder="Email" /></div>
-								<div class="col-12"><textarea name="message" placeholder="Message"></textarea></div>
-								<div class="col-12">
-									<ul class="actions special">
-										<li><input type="submit" class="button" value="Send Message" /></li>
-										<li><input type="reset" class="button alt" value="Clear Form" /></li>
-									</ul>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</section>
+		
 
 		<!-- Footer -->
 			<section id="footer">
@@ -383,7 +358,7 @@
 					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="http://github.com/samj0516" class="icon brands fa-github"><i class="fab fa-github"></i></a></li>
 				</ul>
 				<div class="copyright">
 					<ul class="menu">
