fiddlin with icons

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								<section>
 									<span class="feature-icon"><span class="icon fa-clock"></span></span>
 									<header>
-										<h3>Gravida</h3>
+										<h3><i class="fab fa-apple"></i></h3>
 									</header>
 									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
 									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
@@ -358,7 +358,9 @@
 					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-					<li><a href="http://github.com/samj0516" class="icon brands fa-github"><i class="fab fa-github"></i></a></li>
+					<li><a href="#" class="label" ><span class="icon fab fa-github" ></span>Github</a></li>
+					<li><i class="fab fa-apple"></i></li
+					
 				</ul>
 				<div class="copyright">
 					<ul class="menu">
